name:                exphp-prelude
version:             0.1.0.0
synopsis:            Personal prelude; forked from basic-prelude.
description:
homepage:            https://github.com/exphp/exphp-prelude
license:             MIT
license-file:        LICENSE
author:              Michael Lamparski
maintainer:          diagonaldevice@gmail.com
extra-source-files:  README.md ChangeLog.md

category:            Control, Prelude
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     ExpHPrelude
  build-depends:       base                     >= 4.6     && < 5
                     , basic-prelude
                     , text
                     , safe
                     , deepseq

source-repository head
  type:     git
  location: git://github.com/exphp/exphphp-prelude.git
